@@ -49,6 +49,7 @@ CLUSTERING_CPPFLAGS="-DCLUSTERING_SUITE -I`pwd`/include -I`pwd`/src/BasicClasses
 CLUSTERING_CLEAN_LDFLAGS=""
 CLUSTERING_LDFLAGS=""
 CLUSTERING_LIBS=""
+CLUSTERING_LD_LIBRARY_PATH=""
 
 dnl =========================================================================
 dnl Architecture and OS detection
@@ -220,6 +221,7 @@ CLUSTERING_LIBS="${CLUSTERING_LIBS} ${XML2_LIBS}"
 AX_CHECK_IS_SYSTEM_LIBRARY_PATH([${XML2_SHAREDLIBSDIR}],[],
 [
   CLUSTERING_LDFLAGS="${CLUSTERING_LDFLAGS} -L${XML2_SHAREDLIBSDIR} -R${XML2_SHAREDLIBSDIR}"
+  CLUSTERING_LD_LIBRARY_PATH="{XML2_SHAREDLIBSDIR}"
 ])
 
 dnl =========================================================================
@@ -312,6 +314,7 @@ if test "x$muster_installed" = "xyes"; then
   AX_CHECK_IS_SYSTEM_LIBRARY_PATH([${MUSTER_LIBSDIR}],[],
   [
     CLUSTERING_LDFLAGS="${CLUSTERING_LDFLAGS} -L${MUSTER_LIBSDIR} -R${MUSTER_LIBSDIR}"
+    CLUSTERING_LD_LIBRARY_PATH="${CLUSTERING_LD_LIBRARY_PATH}:${MUSTER_LIBSDIR}"
   ])
 
 fi
@@ -339,6 +342,7 @@ if test "x$mpi_installed" = "xyes"; then
   AX_CHECK_IS_SYSTEM_LIBRARY_PATH([${MPI_LIBSDIR}],[],
   [
     CLUSTERING_LDFLAGS="${CLUSTERING_LDFLAGS} -L${MPI_LIBSDIR} -R${MPI_LIBSDIR} -L${MPI_LIBSDIR}/shared -R${MPI_LIBSDIR}/shared"
+    CLUSTERING_LD_LIBRARY_PATH="${CLUSTERING_LD_LIBRARY_PATH}:${MPI_LIBSDIR}"
   ])
   
 fi
@@ -357,6 +361,7 @@ if test "x$SQLITE3_VERSION" != "x"; then
   AX_CHECK_IS_SYSTEM_LIBRARY_PATH([${SQLITE3_LIBSDIR}],[],
   [
     CLUSTERING_LDFLAGS="${CLUSTERING_LDFLAGS} -L${SQLITE3_LIBSDIR} -R${SQLITE3_LIBSDIR}"
+    CLUSTERING_LD_LIBRARY_PATH="${CLUSTERING_LD_LIBRARY_PATH}:${SQLITE3_LIBSDIR}"
   ])
   
 else
@@ -397,6 +402,7 @@ CLUSTERING_LIBS="${CLUSTERING_LIBS} ${BOOST_THREAD_LIBS}"
 AX_CHECK_IS_SYSTEM_LIBRARY_PATH([${BOOST_THREAD_LDPATH}],[],
 [
   CLUSTERING_LDFLAGS="${CLUSTERING_LDFLAGS} -L${BOOST_THREAD_LDPATH} -R${BOOST_THREAD_LDPATH}"
+  CLUSTERING_LD_LIBRARY_PATH="${CLUSTERING_LD_LIBRARY_PATH}:${BOOST_THREAD_LDPATH}"
 ])
 
 
@@ -416,6 +422,7 @@ CLUSTERING_LIBS="${CLUSTERING_LIBS} ${MPFR_LIBS}"
 AX_CHECK_IS_SYSTEM_LIBRARY_PATH([${MPFR_LIBSDIR}],[],
 [
   CLUSTERING_LDFLAGS="${CLUSTERING_LDFLAGS} -L${MPFR_LIBSDIR} -R${MPFR_LIBSDIR}"
+  CLUSTERING_LD_LIBRARY_PATH="${CLUSTERING_LD_LIBRARY_PATH}:${MPFR_LIBSDIR}"
 ])
 
 dnl =========================================================================
@@ -434,6 +441,7 @@ CLUSTERING_LIBS="${CLUSTERING_LIBS} ${GMP_LIBS}"
 AX_CHECK_IS_SYSTEM_LIBRARY_PATH([${GMP_LIBSDIR}],[],
 [
   CLUSTERING_LDFLAGS="${CLUSTERING_LDFLAGS} -L${GMP_LIBSDIR} -R${GMP_LIBSDIR}"
+  CLUSTERING_LD_LIBRARY_PATH="${CLUSTERING_LD_LIBRARY_PATH}:${GMP_LIBSDIR}"
 ])
 
 dnl =========================================================================
@@ -452,6 +460,8 @@ CLUSTERING_LIBS="${CLUSTERING_LIBS} ${CGAL_LIBS}"
 AX_CHECK_IS_SYSTEM_LIBRARY_PATH([${CGAL_LIBSDIR}],[],
 [
   CLUSTERING_LDFLAGS="${CLUSTERING_LDFLAGS} -L${CGAL_LIBSDIR} -R${CGAL_LIBSDIR}"
+  CLUSTERING_LD_LIBRARY_PATH="${CLUSTERING_LD_LIBRARY_PATH}:${CGAL_LIBSDIR}"
+  AC_SUBST(CGAL_LIBSDIR)
 ])
 
 dnl =========================================================================
@@ -480,6 +490,7 @@ AC_SUBST(CLUSTERING_CPPFLAGS)
 AC_SUBST(CLUSTERING_LDFLAGS)
 AC_SUBST(CLUSTERING_CLEAN_LDFLAGS)
 AC_SUBST(CLUSTERING_LIBS)
+AC_SUBST(CLUSTERING_LD_LIBRARY_PATH)
 
 dnl NOTE: the 'pcfparser_svn1816' is a temporary dependency until the new
 dnl 'common_files' package is defined
