@@ -4,6 +4,6 @@ source @sub_MRNETAPP_HOME@/etc/sourceme.sh
 
 export TDBSCAN_HOME=@sub_PREFIX@
 export MRNAPP_FILTER_PATH=$TDBSCAN_HOME/lib:$MRNAPP_FILTER_PATH
-export LD_LIBRARY_PATH=@sub_MRNETAPP_LIBSDIR@:@sub_CLUSTERING_DYNAMIC_PATH@:@sub_CGAL_DYNAMIC_PATH@:$LD_LIBRARY_PATH
+export LD_LIBRARY_PATH=@sub_MRNETAPP_LIBSDIR@:@sub_CLUSTERING_LD_LIBRARY_PATH@:$TDBSCAN_HOME/lib:$LD_LIBRARY_PATH
 export PATH=$TDBSCAN_HOME/bin:$PATH
 
